{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 468,
  "lineage": "d7dbb198-794c-ef56-32ea-9b0ebcb6e372",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-01ec43622726af208",
            "public_dns": "ec2-54-212-144-133.us-west-2.compute.amazonaws.com",
            "public_ip": "54.212.144.133",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dontstarvetogether_ubuntu",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ffade19910cbfc0",
            "arn": "arn:aws:ec2:us-west-2:123871167802:instance/i-09d87cfc17773b7e9",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d87cfc17773b7e9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "GamingServerKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-089729fdd4c5ae9ea",
            "private_dns": "ip-10-0-1-16.us-west-2.compute.internal",
            "private_ip": "10.0.1.16",
            "public_dns": "ec2-54-202-103-178.us-west-2.compute.amazonaws.com",
            "public_ip": "54.202.103.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bf25f618496e9c45",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078328475b095eebc",
            "tags": {
              "Name": "dontstarvetogetherubuntu-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077e63f51140b6096"
            ]
          },
          "dependencies": [
            "aws_key_pair.GamingServerKeyPair",
            "aws_security_group.DST-Ports",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03d72091cfb131a00",
            "owner_id": "123871167802",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0ec48c0c22dd37bfe"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ec43622726af208",
            "id": "nat-0a7c2b60e5a60270e",
            "network_interface_id": "eni-056b33e0ac9f988ce",
            "private_ip": "10.0.1.89",
            "public_ip": "54.212.144.133",
            "subnet_id": "subnet-078328475b095eebc"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-067e868675c26c9a5",
            "owner_id": "123871167802",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0a7c2b60e5a60270e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-0ec48c0c22dd37bfe"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-067a9ee33cb84a3f2",
            "owner_id": "123871167802",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d72091cfb131a00",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0ec48c0c22dd37bfe"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0642228d177bf80",
            "route_table_id": "rtb-067e868675c26c9a5",
            "subnet_id": "subnet-028a9f9e0a6ba157f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.main-private",
            "aws_subnet.main-private-1",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc9294abe5a0c808",
            "route_table_id": "rtb-067e868675c26c9a5",
            "subnet_id": "subnet-01e99a033aea10a6e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.main-private",
            "aws_subnet.main-private-2",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec64dd541bd2e417",
            "route_table_id": "rtb-067e868675c26c9a5",
            "subnet_id": "subnet-0801d000bf717d52a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.main-private",
            "aws_subnet.main-private-3",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b42516a827fdef8",
            "route_table_id": "rtb-067a9ee33cb84a3f2",
            "subnet_id": "subnet-078328475b095eebc"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c29dc8754a3c3085",
            "route_table_id": "rtb-067a9ee33cb84a3f2",
            "subnet_id": "subnet-0ae97502480817641"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2856a04100c5119",
            "route_table_id": "rtb-067a9ee33cb84a3f2",
            "subnet_id": "subnet-0717a700c5ca452a0"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-3",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DST-Ports",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:security-group/sg-077e63f51140b6096",
            "description": "This security group allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077e63f51140b6096",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10999,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10999
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "DST-Ports",
            "name_prefix": null,
            "owner_id": "123871167802",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DST-Ports"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec48c0c22dd37bfe"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-028a9f9e0a6ba157f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-028a9f9e0a6ba157f",
            "map_public_ip_on_launch": false,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-0ec48c0c22dd37bfe"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-01e99a033aea10a6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-01e99a033aea10a6e",
            "map_public_ip_on_launch": false,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-0ec48c0c22dd37bfe"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-0801d000bf717d52a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0801d000bf717d52a",
            "map_public_ip_on_launch": false,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-0ec48c0c22dd37bfe"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-078328475b095eebc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-078328475b095eebc",
            "map_public_ip_on_launch": true,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0ec48c0c22dd37bfe"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-0ae97502480817641",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ae97502480817641",
            "map_public_ip_on_launch": true,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-0ec48c0c22dd37bfe"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-0717a700c5ca452a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0717a700c5ca452a0",
            "map_public_ip_on_launch": true,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-0ec48c0c22dd37bfe"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "GamingServerVPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:vpc/vpc-0ec48c0c22dd37bfe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08d0b859d18e96a04",
            "default_route_table_id": "rtb-013edaf58396a2c51",
            "default_security_group_id": "sg-06d85819f3ae1721b",
            "dhcp_options_id": "dopt-70442608",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ec48c0c22dd37bfe",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-013edaf58396a2c51",
            "owner_id": "123871167802",
            "tags": {
              "Name": "GamingServerVPC"
            }
          }
        }
      ]
    }
  ]
}